Fix wrapping issue on Chrome.

--- a/resources/public/css/application.css
+++ b/resources/public/css/application.css
@@ -13,6 +13,7 @@ a.download:hover {
 }
 a.date {
     color: #CCC;
+    white-space: nowrap;
 }
 a.date:visited {
     color: #CCC;
